--- a/Bakery.Wpf/Views/EditAndCreateProductWindow.xaml
+++ b/Bakery.Wpf/Views/EditAndCreateProductWindow.xaml
@@ -7,6 +7,32 @@
         mc:Ignorable="d"
         Title="EditAndCreateProductWindow" Height="450" Width="800">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition  Width="200"/>
+            <ColumnDefinition Width="500"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="60"/>
+            <RowDefinition Height="10"/>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="10"/>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="10"/>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="10"/>
+            <RowDefinition Height="40"/>
+        </Grid.RowDefinitions>
+
+        <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" Text="Produkt erstellen" FontWeight="Bold"/>
+        <TextBlock Grid.Column="0" Grid.Row="2" Margin="10,0,0,0" Text="Produktnummer" VerticalAlignment="Center"/>
+        <TextBlock Grid.Column="0" Grid.Row="4" Margin="10,0,0,0" Text="Produktname" VerticalAlignment="Center"/>
+        <TextBlock Grid.Column="0" Grid.Row="6" Margin="10,0,0,0" Text="Preis" VerticalAlignment="Center"/>
+        <TextBox Grid.Column="1" Grid.Row="2" Text="{Binding ProductNr, UpdateSourceTrigger=PropertyChanged}"/>
+        <TextBox Grid.Column="1" Grid.Row="4" Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
+        <TextBox Grid.Column="1" Grid.Row="6" Text="{Binding Price, UpdateSourceTrigger=PropertyChanged}"/>
+
+        <Button Grid.Row="8" Grid.Column="0" Margin="5,5,5,5" Content="Speichern"/>
+        <Button Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="2" Width="200" Margin="205,5,5,5" HorizontalAlignment="Left" Content="Rückgängig"/>
     </Grid>
 </Window>
